[package]
name = "letterboxsolver"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Solve NYT letterbox game"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rayon = "1.8.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
slint = "1.3.2"
text_io = "0.1.12"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "LetterBox Solver"
identifier = "io.github.tamjidrahman.letterboxsolver"
